# carbon-shade-web

./: .claudeignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  RESEARCH-PHASE4-TEST-IMPACT.md  demo-gameloop.html  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.src.json  tsconfig.test.json  vite.config.ts
.ci/: combat-boundaries.json
.claude/: settings.json  statusline.mjs  stop-hook.mjs
.claude/agents/: combat-kernel-reviewer.md  combat-kernel-reviewer.memory.md
.claude/hooks/: guard-generated-dirs.mjs  guard-lockfile.mjs  guard-phaser-boundary.mjs  guard-velocity-writes.mjs  notify.mjs  post-node-check.mjs  post-typecheck.mjs  reset-status.mjs
.claude/memory/: MEMORY.md  architecture-improvement-plan.md  architecture-quick-ref.md  claude-code-automation-setup-2026-05-19.md  combat-lab-0.3-state.md  combat-lab-dnf-alignment-pivot-2026-05-21.md  dnf-client-resource-paths-2026-05-11.md  dnf-costume-extraction-truth.md  dnf-extract-build-pitfalls.md  dnf-physics-phase1-data-summary.md  feedback-bash-cwd-persists-across-calls.md  feedback-check-git-state-before-staging.md  feedback-dnf-data-confidence-tiers.md  feedback-dnf-extract-mandatory.md  feedback-dnf-pve-scope-only.md  (+13 more)
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
data/: stage1-baseline.db
docs/: 01-core-concept-document-v0.1.md  01-project-identity.md  02-neople-dnf-open-api-auxiliary-material.md  03-development-workflow-v0.1.md  README.md  asset-update-fix4-notes.md  dfo-action-handfeel-replication-plan.md  dfo-combat-implementation-backlog.md  dnf-dfo-combat-data-model-and-damage-report.md  dnf-dfo-combat-frame-ai-implementation-report.md  dnf-dfo-mechanics-gap-analysis.md  fix6-normalized-sprite-pipeline.md  handfeel-fix5-anchor-notes.md  handfeel-pass-notes.md  source-policy.md  training-ground-r1-r2-plan.md  training-ground-r3-r4-restoration-plan.md
scripts/: analyze.mjs  assert-runtime-evidence.mjs  audit-verify.mjs  browser-smoke-evidence.mjs  browser-smoke.mjs  build.mjs  check-all-player-shards.mjs  check-head-player-shards.mjs  check-swordman-shard.mjs  closed-loop-status.mjs  compile-runtime-assets.mjs  compile-schema.mjs  completion.mjs  consistency-check.mjs  data-contract-audit.mjs  diff-weapon-anims.mjs  export-runtime-json.mjs  extract-actions.mjs  extract-berserker-action.mjs  extract-equipment-layer.mjs  generate-actions.mjs  import-to-sqlite.mjs  phase-readiness.mjs  pipeline.mjs  research-pvf-thresholds.mjs  run-tsc.mjs  scan-dgn-stale-mapids.mjs  setup-git-hooks.mjs  smoke-test.mjs  stage1-baseline.mjs  static-test.mjs  sync-truth-to-manifest.mjs  transpile-one.cjs  transpile.mjs  typecheck.mjs  validate-combat-boundaries.mjs  validate-sprites.mjs  verify-gameloop.mjs
src/: main.ts
tools/: extract-assets.mjs
tools/dnf-porting-src/: BufferReader.h  CMakeLists.txt  EnumTables.h  ImgFile.cpp  ImgFile.h  NpkFile.cpp  NpkFile.h  PvfAnimation.cpp  PvfDocument.cpp  PvfDocument.h  PvfNode.cpp  PvfNode.h  PvfReader.cpp  PvfReader.h  PvfScript.cpp  PvfScript.h  PvfString.cpp  PvfString.h  main.cpp
verification/: dgn-stale-summary-2026-05-27.json  dist-manifest-stage1-baseline.json  extraction-report-stage1-baseline.json  nut-list-2026-05-27.json  provenance-audit-stage1-baseline.json
(+400 files in other folders)
